--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>example.k8spatterns.io</groupId>
+  <groupId>examples.k8spatterns.io</groupId>
   <artifactId>random-generator</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
@@ -22,21 +22,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <fabric8.generator.name>random-generator:latest</fabric8.generator.name>
-    <fabric8.enricher.fmp-service.type>NodePort</fabric8.enricher.fmp-service.type>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -53,8 +50,7 @@
         <artifactId>fabric8-maven-plugin</artifactId>
         <version>3.5.42</version>
       </plugin>
+
     </plugins>
   </build>
-
-
 </project>
