--- a/pom.xml
+++ b/pom.xml
@@ -4,62 +4,41 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>examples.k8spatterns.io</groupId>
-  <artifactId>random-generator</artifactId>
+  <artifactId>random-generator-parent</artifactId>
   <version>1.0</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
-  <name>random-generator</name>
-  <description>Simple random generator</description>
-
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.2.RELEASE</version>
-    <relativePath/>
-  </parent>
+  <name>${project.artifactId}</name>
+  <description>Random Generator :: Parent</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <app.version>${project.version}</app.version>
     <image.repo>k8spatterns</image.repo>
-    <docker.name>${image.repo}/random-generator:${app.version}</docker.name>
+    <image.tag>${project.version}</image.tag>
+    <image.tag.extension/>
+    <docker.name>${image.repo}/random-generator:${image.tag}${image.tag.extension}</docker.name>
     <docker.verbose>true</docker.verbose>
+    <version.docker-maven-plugin>0.29.0</version.docker-maven-plugin>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>spring</module>
+  </modules>
 
   <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-
     <plugins>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <compilerArgument>-Xlint:deprecation</compilerArgument>
+          <showWarnings>true</showWarnings>
+        </configuration>
       </plugin>
-
-      <plugin>
-				<groupId>io.fabric8</groupId>
-        <artifactId>docker-maven-plugin</artifactId>
-        <version>0.28.0</version>
-      </plugin>
-
     </plugins>
   </build>
 
