--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 # Overall version
 version: @image.tag@
 
+# Always show details for the health checks
+management:
+ endpoint:
+   health:
+     show-details: always
