--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <profile>
       <id>v2</id>
       <properties>
-        <app.version>2.0</app.version>
+        <image.tag>2.0</image.tag>
       </properties>
     </profile>
   </profiles>
