--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -89,6 +89,12 @@
 
   <profiles>
     <profile>
+      <id>v1</id>
+      <properties>
+        <image.tag>1.0</image.tag>
+      </properties>
+    </profile>
+    <profile>
       <id>v2</id>
       <properties>
         <image.tag>2.0</image.tag>
